Register and Bmob

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,20 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/jcore-android_v1.1.0.jar')
     compile files('libs/jpush-android_v3.0.1.jar')
+
+    //依赖注入框架ButterKnife
+    compile 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+
+    //圆角图片CircleImageView
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    //图片加载库Glide
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+
+    compile 'cn.bmob.android:bmob-sdk:3.5.0'
+    //bmob-sms，Bmob单独为短信服务提供的包
+    compile 'cn.bmob.android:bmob-sms:1.0.1'
+
+    //bmob兼容Android6.0
+    compile 'cn.bmob.android:http-legacy:1.0'
 }
