--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,21 @@
     <!-- Required -->
     <uses-permission android:name="aiyuan1996.cn.firerunning.permission.JPUSH_MESSAGE" />
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
+    <!--允许联网 -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <!--保持CPU 运转，屏幕和键盘灯有可能是关闭的,用于文件上传和下载 -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <!--允许读取手机状态 用于创建BmobInstallation-->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--获取sd卡写的权限，用于文件上传和下载-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <!--获取GSM（2g）、WCDMA（联通3g）等网络状态的信息  -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <!--获取wifi网络状态的信息 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
@@ -34,7 +40,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.LoginActivity">
+        <activity android:name=".ui.UserActivity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -42,19 +48,31 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".ui.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.PushSetActivity"
+            android:name=".ui.PushActivity.PushSetActivity"
             android:label="@string/title_PushActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.TestActivity"
+            android:name=".ui.PushActivity.TestActivity"
             android:label="@string/test_Activity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.SettingActivity"
+            android:name=".ui.UserActivity.ChangePasswordActivity"
+            android:label="更改密码"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.UserActivity.FindPasswordActivity"
+            android:label="找回密码"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.UserActivity.RegisteredActivity"
+            android:label="用户注册"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.PushActivity.SettingActivity"
             android:label="@string/set_Activity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
@@ -75,6 +93,8 @@
                 <category android:name="aiyuan1996.cn.firerunning" />
             </intent-filter>
         </activity>
+
+
         <!-- Required SDK 核心功能 -->
         <!-- 可配置android:process参数将PushService放在其他进程中 -->
         <service
@@ -171,7 +191,7 @@
             android:name="JPUSH_APPKEY"
             android:value="f92ed7be9e11e4725c02bd3b" />
 
-        <activity android:name=".activity.webViewActivity"></activity>
+        <activity android:name=".ui.PushActivity.webViewActivity"></activity>
     </application>
 
 </manifest>
