--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="aiyuan1996.cn.firerunning">
 
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality. 
-    -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <!-- Required -->
     <permission
@@ -16,22 +11,28 @@
     <!-- Required -->
     <uses-permission android:name="aiyuan1996.cn.firerunning.permission.JPUSH_MESSAGE" />
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
-    <!--允许联网 -->
+    <!-- 允许联网 -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <!--保持CPU 运转，屏幕和键盘灯有可能是关闭的,用于文件上传和下载 -->
+    <!-- 保持CPU 运转，屏幕和键盘灯有可能是关闭的,用于文件上传和下载 -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <!--允许读取手机状态 用于创建BmobInstallation-->
+    <!-- 允许读取手机状态 用于创建BmobInstallation -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <!--获取sd卡写的权限，用于文件上传和下载-->
+    <!-- 获取sd卡写的权限，用于文件上传和下载 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-    <!--获取GSM（2g）、WCDMA（联通3g）等网络状态的信息  -->
+    <!-- 获取GSM（2g）、WCDMA（联通3g）等网络状态的信息 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    <!--获取wifi网络状态的信息 -->
+    <!-- 获取wifi网络状态的信息 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!-- 读取联系人权限 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+
 
     <application
         android:name=".MyApplication"
@@ -53,39 +54,39 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.PushActivity.PushSetActivity"
-            android:label="@string/title_PushActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/push_setting"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.PushActivity.TestActivity"
-            android:label="@string/test_Activity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/test_Activity" />
         <activity
             android:name=".ui.UserActivity.ChangePasswordActivity"
-            android:label="更改密码"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="更改密码" />
         <activity
             android:name=".ui.UserActivity.FindPasswordActivity"
-            android:label="找回密码"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="找回密码" />
         <activity
             android:name=".ui.UserActivity.RegisteredActivity"
-            android:label="用户注册"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="用户注册" />
         <activity
-            android:name=".ui.PushActivity.SettingActivity"
-            android:label="@string/set_Activity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".ui.PushActivity.SettingTimeActivity"
+            android:label="设置推送时间" />
         <activity
             android:name="cn.jpush.android.ui.PopWinActivity"
             android:exported="false"
             android:theme="@style/MyDialogStyle" />
+        <activity
+            android:name=".ui.PushActivity.webViewActivity"
+            android:label="@string/push_history" />
+        <activity
+            android:name=".ui.SettingsActivity"
+            android:label="@string/setting" />
 
         <!-- Required SDK核心功能 -->
         <activity
             android:name="cn.jpush.android.ui.PushActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:exported="false"
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:exported="false">
             <intent-filter>
                 <action android:name="cn.jpush.android.ui.PushActivity" />
 
@@ -93,7 +94,6 @@
                 <category android:name="aiyuan1996.cn.firerunning" />
             </intent-filter>
         </activity>
-
 
         <!-- Required SDK 核心功能 -->
         <!-- 可配置android:process参数将PushService放在其他进程中 -->
@@ -191,7 +191,8 @@
             android:name="JPUSH_APPKEY"
             android:value="f92ed7be9e11e4725c02bd3b" />
 
-        <activity android:name=".ui.PushActivity.webViewActivity"></activity>
+        <activity android:name=".ui.UserActivity.UserManagerActivity" />
+        <activity android:name=".ui.AddSafeContactsActivity"></activity>
     </application>
 
 </manifest>
